--- a/config/locales/views/pages/de.yml
+++ b/config/locales/views/pages/de.yml
@@ -233,7 +233,7 @@ de:
           und kurz sein. Deswegen benutzen wir die Abkürzung LGBTI. Das ist die
           englische Abkürzung für Lesben, Schwule, Bisexuelle, Transsexuelle und
           Intersexuelle. Eine deutsche gibt es nicht.
-        question_six: "> Warum benutzen clarat den Begriff Migranten?"
+        question_six: "> Warum benutzt clarat den Begriff Migranten?"
         answer_six: |
           Bei clarat benutzen wir immer eine einfache Sprache. Deswegen benutzen
           wir Wörter, die man leicht versteht. Und die viele Menschen kennen.
