Improve internal faq links

--- a/config/locales/views/pages/de.yml
+++ b/config/locales/views/pages/de.yml
@@ -160,7 +160,7 @@ de:
           > Warum schreibt clarat immer in einer einfachen Sprache?
         answer_two: |
           Damit alle Hilfe finden, schreiben wir alle Angebote in einer
-          einfachen Sprache. Diese %{simple_language} ist für alle leicht
+          einfachen Sprache. Diese einfache Sprache ist für alle leicht
           verständlich. Und weil die Texte bei clarat kurz sind, sieht man
           schnell, welche Hilfen es gibt. Und kann die passende Hilfe für sich
           finden. Die clarat Sprache ist auch für Menschen, die nicht so gut
