--- a/config/locales/views/offers/de.yml
+++ b/config/locales/views/offers/de.yml
@@ -154,6 +154,8 @@ de:
           gplus: "Google+"
           pinterest: "Pinterest"
       who_contact_people:
+        female: "Frau"
+        male: "Herr"
         person: "Ansprechpartner"
         phone: "Telefon: "
         fax: "Fax: "
