--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -51,7 +51,10 @@ de:
 
     search_results:
       more: "(Weitere Angebote …)"
-      show_on_big_map: "Auf großer Karte anzeigen"
+      map:
+        show_on_big_map: "Auf großer Karte anzeigen"
+        enlarge_map: "Karte vergrößern"
+        headline_small_map: "Angebote vor Ort auf der Karte"
       personal_offers:
         zero: "Keine Angebote vor Ort"
         one: "Ein Angebot vor Ort"
@@ -61,6 +64,8 @@ de:
         one: "Eine Telefon- oder Onlineberatung"
         other: "%{count} Telefon- und Onlineberatungen"
 
+    categories_sidebar:
+      all_categories: "Alle Kategorien"
     single_search_result:
       encounters:
         personal: "Persönlich" #?
