--- a/config/locales/models/offer/de.yml
+++ b/config/locales/models/offer/de.yml
@@ -16,7 +16,7 @@ de:
         muss ausgefüllt werden, wenn Encounter nicht "personal" ist
       only_approved_organizations: |
         darf nur bestätigte Organisationen beinhalten, bevor dieses Angebot
-        bestätigt werden kann. Unbestätigt: %{list}.
+        bestätigt werden kann. Bestätigt: %{list}.
       approved_by_creator: "kann nicht von dem/der Ersteller/in gesetzt werden"
       incomplete: |
         kann nicht angehakt werden, wenn nicht auch "Completed" gesetzt ist
