--- a/config/locales/models/offer/de.yml
+++ b/config/locales/models/offer/de.yml
@@ -20,3 +20,4 @@ de:
       approved_by_creator: "kann nicht von dem/der Ersteller/in gesetzt werden"
       incomplete: |
         kann nicht angehakt werden, wenn nicht auch "Completed" gesetzt ist
+      needs_age: "wird benötigt"
