for #379 - add subjects for offer emails

--- a/config/locales/views/offer_mailer/de.yml
+++ b/config/locales/views/offer_mailer/de.yml
@@ -1,4 +1,6 @@
 de:
   broadcast_mailer:
-    welcome:
+    inform:
       subject: "clarat Berlin - Sie sind in den gelben Seiten für die Kinder- und Jugendhilfe"
+    newly_approved_offer:
+      subject: "Neues Angebot auf clarat"
