for #379 - fix locale bug

--- a/config/locales/views/offer_mailer/de.yml
+++ b/config/locales/views/offer_mailer/de.yml
@@ -1,5 +1,5 @@
 de:
-  broadcast_mailer:
+  offer_mailer:
     inform:
       subject: "clarat Berlin - Sie sind in den gelben Seiten für die Kinder- und Jugendhilfe"
     newly_approved_offer:
