--- a/config/locales/models/offer/de.yml
+++ b/config/locales/models/offer/de.yml
@@ -15,8 +15,7 @@ de:
       needs_area_when_remote: |
         muss ausgefüllt werden, wenn Encounter nicht "personal" ist
       only_approved_organizations: |
-        darf nur bestätigte Organisationen beinhalten, bevor dieses Angebot
-        bestätigt werden kann. Bestätigt: %{list}.
+        darf nur bestätigte Organisationen beinhalten. Bestätigt: %{list}.
       approved_by_creator: "kann nicht von dem/der Ersteller/in gesetzt werden"
       incomplete: |
         kann nicht angehakt werden, wenn nicht auch "Completed" gesetzt ist
