for #394 - add  as a host for Website and give it a translation

--- a/config/locales/views/offers/de.yml
+++ b/config/locales/views/offers/de.yml
@@ -119,6 +119,7 @@ de:
         internet_presence: "Wo erfährst du mehr im Netz?"
         websites:
           own: "Webseite"
+          document: "Weitere Infos"
           facebook: "Facebook"
           twitter: "Twitter"
           youtube: "Youtube"
