for #404 (extends #399) - add spoc to contact people and block inform emails by those CPs

--- a/config/locales/gems/activerecord/de.yml
+++ b/config/locales/gems/activerecord/de.yml
@@ -74,3 +74,5 @@ de:
         referencable: Referenzpunkt
         created_at: Erstellungszeitpunkt
         updated_at: Editierungszeitpunkt
+      contact_person:
+        spoc: SPoC
