for #404 - add validation for contact_people in offers

--- a/config/locales/models/offer/de.yml
+++ b/config/locales/models/offer/de.yml
@@ -25,3 +25,6 @@ de:
         kann nicht angehakt werden, wenn nicht auch "Completed" gesetzt ist
       is_needed: "wird benötigt"
       age_from_be_smaller: "darf nicht größer sein als Age to"
+      contact_person_not_choosable: |
+        müssen alle zu einer der ausgewählten Organisationen gehören oder
+        als SPoC markiert sein
