more functionality for offer approval state machine and partial admin interface, tests failing

--- a/config/locales/gems/activerecord/de.yml
+++ b/config/locales/gems/activerecord/de.yml
@@ -76,3 +76,5 @@ de:
         updated_at: Editierungszeitpunkt
       contact_person:
         spoc: SPoC
+      offer:
+        aasm_state: Zustand
