--- a/config/locales/views/rails_admin/de.yml
+++ b/config/locales/views/rails_admin/de.yml
@@ -13,26 +13,26 @@ de:
         states:
           names:
             initialized: "initialized"
-            ready_for_approval: "ready_for_approval"
+            completed: "completed"
             approved: "approved"
-            in_renewal: "in_renewal"
-            renewed: "renewed"
             expired: "expired"
-            deactivated: "deactivated"
+            internal_feedback: "internally deactivated"
+            external_feedback: "externally deactivated"
             paused: "paused"
           icons:
             initialized: "fa-file-o"
-            ready_for_approval: "fa-check-circle-o"
+            completed: "fa-check-circle-o"
             approved: "fa-check-circle"
-            in_renewal: "fa-file-text-o"
-            renewed: "fa-file-text"
             expired: "fa-calendar-times-o"
-            deactivated: "fa-user-times"
+            internal_feedback: "fa-user-times"
+            external_feedback: "fa-users"
             paused: "fa-pause"
         events:
-          advance: "Weiterschalten"
+          complete: "Als Komplett Markieren"
+          approve: "Freischalten"
           expire: "Expire"
-          deactivate: "Deaktivieren"
+          deactivate_internal: "Deaktivieren (Intenal Feedback)"
+          deactivate_external: "Deaktivieren (External Feedback)"
           pause: "Pausieren"
 
     main:
