for #379 - change mailing contents and sender address

--- a/config/locales/views/offer_mailer/de.yml
+++ b/config/locales/views/offer_mailer/de.yml
@@ -3,4 +3,4 @@ de:
     inform:
       subject: "clarat Berlin - Sie sind in den gelben Seiten für die Kinder- und Jugendhilfe"
     newly_approved_offers:
-      subject: "Neue Angebote auf clarat referenzieren Sie"
+      subject: "clarat Berlin - Ihre neuen Angebote"
