Setup multiple choice target audience filters

--- a/config/locales/gems/activerecord/de.yml
+++ b/config/locales/gems/activerecord/de.yml
@@ -52,6 +52,9 @@ de:
       language_filter:
         one: Sprachfilter
         other: Sprachfilter
+      target_audience_filter:
+        one: Zielgruppenfilter
+        other: Zielgruppenfilter
       encounter_filter:
         one: Kontaktfilter
         other: Kontaktfilter
