for #411 - button spacing; remove unnecessary admin help displays; improve state change invalid error message

--- a/config/locales/views/rails_admin/de.yml
+++ b/config/locales/views/rails_admin/de.yml
@@ -39,5 +39,5 @@ de:
       change_state:
         success: "Die Zustandsänderung war erfolgreich."
         invalid: |
-          Die Zustandsänderung konnte nicht erfolgen, da das Objekt noch nicht
-          valide ist.
+          Die Zustandsänderung konnte nicht erfolgen, da %{obj} noch nicht
+          valide ist:
