--- a/config/locales/views/offer_mailer/de.yml
+++ b/config/locales/views/offer_mailer/de.yml
@@ -3,4 +3,6 @@ de:
     inform:
       subject: "clarat Berlin - Sie sind in den gelben Seiten für die Kinder- und Jugendhilfe"
     newly_approved_offers:
-      subject: "clarat Berlin - Ihre neuen Angebote"
+      subject:
+        one: "clarat Berlin - Ihr neues Angebot"
+        other: "clarat Berlin - Ihre neuen Angebote"
